[gd_scene load_steps=7 format=3 uid="uid://d0e8e71aee5hp"]

[ext_resource type="PackedScene" uid="uid://dccmbeqml15pg" path="res://scenes/ui/menu_template.tscn" id="1_rwuhk"]
[ext_resource type="Script" path="res://scripts/ui/menu_game_front.gd" id="2_q1xi0"]
[ext_resource type="Script" path="res://scripts/ui/label_version.gd" id="3_iapti"]
[ext_resource type="Script" path="res://scripts/ui/label_date.gd" id="4_c5h8e"]
[ext_resource type="FontFile" uid="uid://cj15etcx8g7g5" path="res://resources/fonts/Playfair_Display/static/PlayfairDisplay-SemiBoldItalic.ttf" id="5_ugb1m"]
[ext_resource type="Script" path="res://scripts/ui/jam_title.gd" id="6_m7bsl"]

[node name="MenuGame" instance=ExtResource("1_rwuhk")]
script = ExtResource("2_q1xi0")

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer" index="2"]
layout_mode = 2

[node name="Version" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2" index="0"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Ver. 1.0.0"
script = ExtResource("3_iapti")

[node name="Credit" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2" index="1"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 16
text = "A game by sim_the_bean"

[node name="Date" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2" index="2"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 16
text = "March 12, 1954"
script = ExtResource("4_c5h8e")

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer" index="3"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer" index="4"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("5_ugb1m")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[fill]Acerola Jam 0 is still ongoing, you have time.[/fill]"
fit_content = true
scroll_active = false
script = ExtResource("6_m7bsl")
text_ongoing = "[fill]Acerola Jam 0 is still ongoing, you have time.[/fill]"
text_ended = "[fill]Acerola Jam 0 has officially ended, thousands in panic.[/fill]"

[node name="Unpause" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_bottom = NodePath("../Restart")
focus_next = NodePath("../Restart")
text = "Resume"

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer" index="1"]
layout_mode = 2
bbcode_enabled = true
text = "[fill][i]Stolen uranium![/i] A batch of the radioactive material was stolen while being transported to the nuclear power plant. 
The energy harnessed from the splitting of the atom of this precious material is what powers your fridge, toaster and microwave oven.
The element poses a danger to civilians. Authorities are looking for the suspect, described as wearing a turtleneck and a white coat. If you know anyone who matches this description, don't hesitate to contact your local police department."
fit_content = true
scroll_active = false

[node name="SaveGame" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer" index="2"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Unpause")
focus_neighbor_bottom = NodePath("../../../../VBoxContainer2/MarginContainer/VBoxContainer/Settings")
focus_next = NodePath("../../../../VBoxContainer2/MarginContainer/VBoxContainer/Settings")
focus_previous = NodePath("../Unpause")
text = "Save Game"

[node name="Restart" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer" index="3"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Unpause")
focus_neighbor_right = NodePath("../../../../VBoxContainer2/MarginContainer/VBoxContainer/Quit")
focus_neighbor_bottom = NodePath("../../../../VBoxContainer2/MarginContainer/VBoxContainer/Settings")
focus_next = NodePath("../../../../VBoxContainer2/MarginContainer/VBoxContainer/Settings")
focus_previous = NodePath("../Unpause")
text = "Restart"

[node name="RichTextLabel2" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer" index="4"]
layout_mode = 2
bbcode_enabled = true
text = "[fill]CHICAGO, Aug. 23. —Industrialist Louis E. Wolfson today confirmed reports that he is buying common stock in Montgomery Ward Co. He did not, however, say whether his purchases were for merely investment purposes or constituted an effort to seize control of the big mail order firm."
fit_content = true
scroll_active = false

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer/VBoxContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_left = NodePath("../../../../VBoxContainer/MarginContainer/VBoxContainer/Unpause")
focus_neighbor_top = NodePath("../../../../VBoxContainer/MarginContainer/VBoxContainer/Restart")
focus_neighbor_bottom = NodePath("../QuitMenu")
focus_next = NodePath("../QuitMenu")
focus_previous = NodePath("../../../../VBoxContainer/MarginContainer/VBoxContainer/Restart")
text = "Settings
"

[node name="RichTextLabel2" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer/VBoxContainer" index="1"]
layout_mode = 2
bbcode_enabled = true
text = "[fill]AMSTERDAM, Netherlands, Aug. 23. —A Royal Dutch KLM airliner from New York crashed into the North Sea off the Dutch coast today and all 21 or more persons aboard are feared to have perished, the KLM air line announced.
"
fit_content = true
scroll_active = false

[node name="QuitMenu" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer/VBoxContainer" index="2"]
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_left = NodePath("../../../../VBoxContainer/MarginContainer/VBoxContainer/Restart")
focus_neighbor_top = NodePath("../Settings")
focus_neighbor_bottom = NodePath("../Quit")
focus_next = NodePath("../Quit")
focus_previous = NodePath("../Settings")
text = "Exit to menu"

[node name="RichTextLabel3" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer/VBoxContainer" index="3"]
layout_mode = 2
bbcode_enabled = true
text = "[fill]LONDON, Aug. 23. French —Premier Pierre Mendes-France conferred more than three hours with Prime Minister Churchill today on ways to salvage the European Defense Community and left with the Briton’s pledge: “I will do all I can to help you.”"
fit_content = true
scroll_active = false

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer/VBoxContainer" index="4"]
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_left = NodePath("../../../../VBoxContainer/MarginContainer/VBoxContainer/Restart")
focus_neighbor_top = NodePath("../QuitMenu")
focus_previous = NodePath("../QuitMenu")
text = "Quit Game"

[node name="RichTextLabel4" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer/VBoxContainer" index="5"]
layout_mode = 2
bbcode_enabled = true
text = "[fill]Sir Winston gave his pledge as he opened the door of Mr. Mendes-France’s car for him after a long talk at Chartwell, the Prime Minister’s country estate 25 miles outside London. British Foreign Secretary Anthony Eden sat in on the talks."
fit_content = true
scroll_active = false

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/Unpause" to="." method="_on_unpause_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/SaveGame" to="." method="_on_save_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer/VBoxContainer/QuitMenu" to="." method="_on_quit_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
